<resources>
    <string name="app_name">k3Android</string>

    <string name="ip">IP address</string>
    <string name="uc">User code</string>

    <string name="tk">Keyboard</string>
    <string name="hggk">HoloLens</string>
    <string name="ssk">Phone</string>
    <string name="kc">Keycube</string>

    <string name="start">Start</string>

    <string name="labelTranscribedText"> </string>
</resources>
