<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextIpAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:hint="@string/ip"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextUserCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextIpAddress"
        android:inputType="datetime"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:hint="@string/uc"/>

    <RadioGroup
        android:id="@+id/radioGroupTextEntryInterface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/editTextUserCode">

        <RadioButton
            android:id="@+id/radioButtonHGGK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hggk"/>

        <RadioButton
            android:id="@+id/radioButtonSSK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ssk"/>

        <RadioButton
            android:id="@+id/radioButtonKC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kc"/>

    </RadioGroup>

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroupTextEntryInterface"
        android:text="@string/start"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelTranscribedText"
        android:layout_above="@+id/editTextTranscribed"
        android:labelFor="@+id/editTextTranscribed" />

    <be.keycu.k3android.BlockedSelectionEditText
        android:id="@+id/editTextTranscribed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_alignParentBottom="true" />

</RelativeLayout>